--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,7 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Основные стили */
 body {
   @apply bg-background text-gray-800;
 }
@@ -19,7 +20,6 @@ button {
   @apply px-4 py-2 rounded-md text-white bg-primary hover:bg-opacity-80 focus:outline-none focus:ring-2 focus:ring-primary;
 }
 
-/* Обновленное меню */
 .menu {
   @apply bg-primary text-white p-4 h-full fixed top-0 left-0 w-64;
 }
@@ -30,22 +30,4 @@ button {
 
 .menu-item a {
   @apply text-white;
-}
-
-/* Адаптивное меню для мобильных устройств */
-.mobile-menu {
-  @apply fixed bottom-0 left-0 w-full bg-primary text-white flex justify-around items-center p-2;
-  /* Убираем padding и устанавливаем flex для горизонтального расположения элементов */
-}
-
-.menu-item {
-  @apply flex-1 text-center py-2; /* Растягиваем элементы по ширине и центрируем текст */
-}
-
-.menu-item a {
-  @apply text-white;
-}
-
-.menu-toggle {
-  @apply hidden; /* Убираем кнопку переключения меню */
 }
